@@ -1,6 +1,9 @@
 v0.1.3
     - rampart-sql:    added missing handle close in sql.reset
     - rampart-server: fixed cookie parsing
+    - rampart-sql:    fixed faulty passing of user argument to callback in exec
+    - rampart-sql:    revamp of reset of global texis parameters, as the
+                      internal texis method caused a significant slowdown.
 v0.1.2
     - rampart-net: resolve error message fixes
     - rampart-net: added resolver.reverse ip to name functions 
